--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ a {
    /
  */
 
-h1, h2, h3, h4 {
+h1, h2, h3, h4, h5 {
     margin: 0;
     padding: 0;
 }
@@ -84,6 +84,7 @@ main {
 
 .main-nav ul {
     display: flex;
+    background-color: #CEB592;
 }
 
 .main-nav li {
@@ -270,8 +271,16 @@ h4 {
     text-transform: capitalize;
 }
 
+h5{
+    color: #ceb592;
+    font-family: 'Amatic SC', cursive;
+    font-size: 1.85em;
+    margin-top: 5px;
+    margin-left: 10px;
+}
+
 .gallery {
-    width: 30%;
+    width: 40%;
     height: auto;
 }
 
@@ -308,7 +317,7 @@ h4 {
 }
 
 .text {
-    width: 70%;
+    width: 60%;
     margin-left: 20px;
 }
 
@@ -411,6 +420,10 @@ p.dolls {
    /
 */
 
+h3.contact {
+    display: inline-block;
+    padding-left: 20px;
+}
 form {
     margin-top: 20px;
     margin-bottom: 22px;
