--- a/css/main.css
+++ b/css/main.css
@@ -57,6 +57,7 @@ h2 {
 
 .container {
     display: flex;
+	flex-wrap: wrap;
 }
 
 .page-header img {
@@ -317,7 +318,8 @@ h5{
 }
 
 .text {
-    width: 60%;
+    max-width: 60%;
+	width: calc(60% - 20px);
     margin-left: 20px;
 }
 
@@ -543,4 +545,14 @@ textarea {
 
 #shopping-cart:hover::after {
     display: block;
+}
+
+@media screen and (max-width: 480px){
+	.container {
+		display: block;
+	}
+	.gallery, .text{
+		max-width: 100%;
+		width: 100%;
+	}
 }
