--- a/css/main.css
+++ b/css/main.css
@@ -212,7 +212,7 @@ hr {
     height: 2px;
     background-color: #ceb592;
     border: 0;
-    margin-top: 60px;
+    margin-top: 50px;
     margin-bottom: 60px;
 }
 
@@ -443,6 +443,8 @@ h5 {
 }
 
 .price-small {
+	margin-top: 5px;
+	margin-bottom: 20px;
     text-align: center;
     font-size: 12px;
     font-weight: 700;
@@ -723,6 +725,13 @@ textarea {
         width: 100%;
         margin-right: 0;
     }
+	
+	.product-link {
+		font-size: 15px;
+	}
+	.price-small{
+		font-size: 14px;
+	}
 }
 
 @media screen and (max-width: 480px) {
