Fix for Failed to load resource errors

--- a/project/templates/contact.html
+++ b/project/templates/contact.html
@@ -4,7 +4,7 @@
 
 {% block content %}
         <header>
-            <img src="/images/contact/cupcake.jpg">
+            <img src="/kind-monster/images/contact/cupcake.jpg">
             <h3 class="contact">Contact Me</h3>
         </header>
 
