--- a/project/templates/about.html
+++ b/project/templates/about.html
@@ -20,21 +20,21 @@
             <h2>&hearts; Adopt a doll</h2>
             <div class="gal-row">
                 <div class="small-img-cont">
-                    <a class="product-link" href="/bunny/">
-                        <img src="/images/about/Bunny5.jpg" alt="Bunny">
+                    <a class="product-link" href="/kind-monster/bunny/">
+                        <img src="/kind-monster/images/about/Bunny5.jpg" alt="Bunny">
                         <span>&hearts; The Teacup Sailor Bunny Girl</span></a>
                     <p class="price-small">$45.00</p>
                 </div>
 
                 <div class="small-img-cont">
-                    <a class="product-link" href="/cherry/">
-                        <img src="/images/about/Cherry5.jpg" alt="Cherry">
+                    <a class="product-link" href="/kind-monster/cherry/">
+                        <img src="/kind-monster/images/about/Cherry5.jpg" alt="Cherry">
                         <span>&hearts; Cherry ~ The fruit orchard elf</span></a>
                     <p class="price-small">$50.00</p>
                 </div>
                 <div class="small-img-cont">
-                    <a class="product-link" href="/malvina/">
-                        <img src="/images/about/Malvina5.jpg" alt="Malvina">
+                    <a class="product-link" href="/kind-monster/malvina/">
+                        <img src="/kind-monster/images/about/Malvina5.jpg" alt="Malvina">
                         <span>&hearts; Malvina ~ The Blue-Haired Fairy</span></a>
                     <p class="price-small">$45.00</p>
                 </div>
@@ -42,22 +42,22 @@
 
             <div class="gal-row">
                 <div class="small-img-cont">
-                    <a class="product-link" href="/ballerina/">
-                        <img src="/images/about/Ballerina2.jpg" alt="Ballerina">
+                    <a class="product-link" href="/kind-monster/ballerina/">
+                        <img src="/kind-monster/images/about/Ballerina2.jpg" alt="Ballerina">
                         <span>&hearts; Ballerina ~ Sad Spring Melody</span></a>
                     <p class="price-small">$45.00</p>
                 </div>
 
                  <div class="small-img-cont">
-                    <a class="product-link" href="/ronnie/">
-                        <img src="/images/about/Ronnie5.jpg" alt="Ronnie">
+                    <a class="product-link" href="/kind-monster/ronnie/">
+                        <img src="/kind-monster/images/about/Ronnie5.jpg" alt="Ronnie">
                         <span>&hearts; Ronnie ~ Winter Fairy Tale</span></a>
                     <p class="price-small">$50.00</p>
                 </div>
 
                 <div class="small-img-cont">
-                    <a class="product-link" href="/amigurumi/">
-                        <img src="/images/about/WinterDolls5.jpg" alt="Winter Amis">
+                    <a class="product-link" href="/kind-monster/amigurumi/">
+                        <img src="/kind-monster/images/about/WinterDolls5.jpg" alt="Winter Amis">
                         <span>&hearts; Choose a Custom Made Ami</span></a>
                     <p class="price-small">$35.00</p>
                 </div>
@@ -71,21 +71,21 @@
             <div class="gal-row">
 
                  <div class="small-img-cont">
-                    <a class="product-link" href="/snail/">
-                        <img src="/images/about/snail-about.png" alt="Tiny snail">
+                    <a class="product-link" href="/kind-monster/snail/">
+                        <img src="/kind-monster/images/about/snail-about.png" alt="Tiny snail">
                         <span>&hearts; Tiny Ami Snail</span></a>
                     <p class="price-small">$15.00</p>
                 </div>
 
                 <div class="small-img-cont">
-                    <a class="product-link" href="/sheep/">
-                        <img src="/images/about/sheep-about.png" alt="Tiny sheep">
+                    <a class="product-link" href="/kind-monster/sheep/">
+                        <img src="/kind-monster/images/about/sheep-about.png" alt="Tiny sheep">
                         <span>&hearts; Tiny Ami Sheep</span></a>
                     <p class="price-small">$20.00</p>
                 </div>
                 <div class="small-img-cont">
-                    <a class="product-link" href="/fox/">
-                        <img src="/images/about/fox-about.png" alt="Tiny fox">
+                    <a class="product-link" href="/kind-monster/fox/">
+                        <img src="/kind-monster/images/about/fox-about.png" alt="Tiny fox">
                         <span>&hearts; Tiny Ami Fox</span></a>
                     <p class="price-small">$20.00</p>
                 </div>
@@ -93,22 +93,22 @@
 
             <div class="gal-row">
                 <div class="small-img-cont">
-                    <a class="product-link" href="/dog/">
-                        <img src="/images/about/dog-about.png" alt="Tiny dog">
+                    <a class="product-link" href="/kind-monster/dog/">
+                        <img src="/kind-monster/images/about/dog-about.png" alt="Tiny dog">
                         <span>&hearts; Tiny Ami Dog</span></a>
                     <p class="price-small">$20.00</p>
                 </div>
 
                 <div class="small-img-cont">
-                    <a class="product-link" href="/rabbit/">
-                        <img src="/images/about/bunny-about.jpg" alt="Tiny rabbit">
+                    <a class="product-link" href="/kind-monster/rabbit/">
+                        <img src="/kind-monster/images/about/bunny-about.jpg" alt="Tiny rabbit">
                         <span>&hearts; Tiny Ami Rabbit</span></a>
                     <p class="price-small">$20.00</p>
                 </div>
 
                 <div class="small-img-cont">
-                    <a class="product-link" href="#">
-                        <img src="/images/about/panda.jpg" alt="Tiny panda">
+                    <a class="product-link" href="/kind-monster/#">
+                        <img src="/kind-monster/images/about/panda.jpg" alt="Tiny panda">
                         <span>&hearts; Tiny Panda Ball</span></a>
                     <p class="price-small">$15.00</p>
                 </div>
